--- a/carousel.html
+++ b/carousel.html
@@ -123,7 +123,7 @@
 
 		//Mobile Nav
 		$(document).on("pagecreate",".page-container",function(){
-			var $carousel = $('carousel')
+			var $carousel = $('#carousel')
 			$carousel.on("swipeleft",function(){
 				rotateSlides('next')
 			});
