--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 										<p class="project-date">2018</p>
 										<div class="project-desc">
 											<p>
-												My current project, I was tapped to migrate one of our flagship sites, <a href="https://www.ticketliquidator.com" target="_blank">TicketLiquidator.com</a>, from a CMS 
+												My most recent project, I was tapped to migrate one of our flagship sites from a CMS 
                                                 that was being decommissioned to our licensed third party CMS given my familiarity with the latter.
 											</p>
                                             <p>
@@ -58,7 +58,7 @@
                                                 the site's content team (eg having 4 event tiles that scroll horizontally on mobile).
                                             </p>
 										</div>
-										<a class="tile-link btn" target="_blank" href="http://beta.ticketliquidator.com">View Site</a>
+										<a class="tile-link btn" target="_blank" href="https://www.ticketliquidator.com">View Site</a>
 									</div>
 								</article>
 							</li>
