--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
 
 							<!-- The Bloody Win, SITE, 2017 -->
 							<li id="the-bloody-win" tabindex="1" class="tile inactive" data-type='site' data-year='2017'>
-								<img class="tile-thumbnail" src="images/the-bloody-win-thumbnail.png" alt="The Bloody Win" />
+								<img class="tile-thumbnail" src="images/thebloodywin-thumbnail.png" alt="The Bloody Win" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/the-bloody-win.png" alt="The Bloody Win" />
+										<img src="images/thebloodywin.png" alt="The Bloody Win" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">The Bloody Win</h3>
@@ -469,10 +469,10 @@
 						<h2 class="content-heading">JavaScript</h2>
 						<ul class="tile-container">
 							<li tabindex="1" class="tile inactive">
-								<img class="tile-thumbnail" src="images/filters-thumbnail.png" alt="Event Results with Filters" />
+								<img class="tile-thumbnail" src="images/feature/filters-thumbnail.png" alt="Event Results with Filters" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/filters.png" alt="Event Results with Filters" />
+										<img src="images/feature/filters.png" alt="Event Results with Filters" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Event Results with Filters</h3>
@@ -493,10 +493,10 @@
 								</article>
 							</li>
 							<li tabindex="1" class="tile inactive">
-								<img class="tile-thumbnail" src="images/cards-thumbnail.png" alt="Event Results as Cards" />
+								<img class="tile-thumbnail" src="images/feature/cards-thumbnail.png" alt="Event Results as Cards" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/cards.png" alt="Event Results as Cards" />
+										<img src="images/feature/cards.png" alt="Event Results as Cards" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Event Results as Cards</h3>
@@ -521,10 +521,10 @@
 								</article>
 							</li>
 							<li tabindex="1" class="tile inactive">
-								<img class="tile-thumbnail" src="images/calendar-thumbnail.png" alt="Event Results Mapped to Calendar" />
+								<img class="tile-thumbnail" src="images/feature/calendar-thumbnail.png" alt="Event Results Mapped to Calendar" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/calendar.png" alt="Event Results Mapped to Calendar" />
+										<img src="images/feature/calendar.png" alt="Event Results Mapped to Calendar" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Event Results Mapped to Calendar</h3>
@@ -539,10 +539,10 @@
 								</article>
 							</li>
 							<li tabindex="1" class="tile inactive">
-								<img class="tile-thumbnail" src="images/widget-thumbnail.png" alt="Search Widget Builder" />
+								<img class="tile-thumbnail" src="images/feature/widget-thumbnail.png" alt="Search Widget Builder" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/widget.png" alt="Search Widget Builder" />
+										<img src="images/feature/widget.png" alt="Search Widget Builder" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Search Widget Builder</h3>
