--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
 
 							<!-- The Bloody Win, SITE, 2017 -->
 							<li id="the-bloody-win" tabindex="1" class="tile inactive" data-type='site' data-year='2017'>
-								<img class="tile-thumbnail" src="images/thebloodywin-thumbnail.png" alt="The Bloody Win" />
+								<img class="tile-thumbnail" src="images/site/thebloodywin-thumbnail.png" alt="The Bloody Win" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/thebloodywin.png" alt="The Bloody Win" />
+										<img src="images/site/thebloodywin.png" alt="The Bloody Win" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">The Bloody Win</h3>
@@ -563,10 +563,10 @@
 								</article>
 							</li>
 							<li tabindex="1" class="tile inactive">
-								<img class="tile-thumbnail" src="images/plugin-thumbnail.png" alt="Events Plugin Builder" />
+								<img class="tile-thumbnail" src="images/feature/plugin-thumbnail.png" alt="Events Plugin Builder" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/plugin.png" alt="Events Plugin Builder" />
+										<img src="images/feature/plugin.png" alt="Events Plugin Builder" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Events Plugin Builder</h3>
