--- a/index.html
+++ b/index.html
@@ -551,15 +551,15 @@
 								</article>
 							</li>
 							
-							<!-- RESULTS WITH FILTERS, FEATURE, 2020 -->
+							<!-- ENHANCED EVENT RESULTS, FEATURE, 2020 -->
 							<li id="results-with-filters" tabindex="1" class="tile inactive" data-type='feature' data-year='2020'>
-								<img class="tile-thumbnail" src="images/feature/results-with-filters-thumbnail.png" alt="Results with Filters" />
+								<img class="tile-thumbnail" src="images/feature/enhanced-event-results-thumbnail.png" alt="Enhanced Event Results" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/feature/results-with-filters.png" alt="Results with Filters" />
+										<img src="images/feature/enhanced-event-results.png" alt="Enhanced Event Results" />
 									</div>
 									<div class="project-info project-content">
-										<h3 class="project-title">Results with Filters</h3>
+										<h3 class="project-title">Enhanced Event Results</h3>
 										<p class="project-date">2020</p>
 										<div class="project-desc">
 											<p>
