--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 								</article>
 							</li>
 
-							<!-- CMS Template Revamp, MISC, 2017 -->
+							<!-- CMS Template Revamp, MISC, 2017 
 							<li id="cms-template-revamp" tabindex="1" class="tile inactive" data-type='misc' data-year='2018'>
 								<img class="tile-thumbnail" src="images/revamp-thumbnail.png" alt="CMS Template Revamp" />
 								<article class="tile-content">
@@ -271,6 +271,7 @@
 									</div>
 								</article>
 							</li>
+							-->
 
 							<!-- EzEvent Tickets, SITE, 2017 -->
 							<li id="ezevent-tickets" tabindex="1" class="tile inactive" data-type='site' data-year='2017'>
