--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 								<img class="tile-thumbnail" src="images/feature/api-results-widget-thumbnail.png" alt="Event Results Widget" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/feature/api-widget-results.png" alt="Event Results Widget" />
+										<img src="images/feature/api-results-widget.png" alt="Event Results Widget" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Event Results Widget</h3>
@@ -667,10 +667,10 @@
 
 							<!-- FLIP CARDS, SITE, 2017 -->
 							<li id="flip-cards" tabindex="1" class="tile inactive" data-type='site' data-year='2017'>
-								<img class="tile-thumbnail" src="images/flip-cards-thumbnail.png" alt="Flip Cards" />
+								<img class="tile-thumbnail" src="images/feature/flip-cards-thumbnail.png" alt="Flip Cards" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/flip-cards.png" alt="Flip Cards" />
+										<img src="images/feature/flip-cards.png" alt="Flip Cards" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Flip Cards</h3>
