--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                                                 be made is when a new Broadway show debuts and a image needs to be added for it.
 											</p>
 										</div>
-										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/3twx0seL/">View in JSFiddle</a>
+										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/oNxrXqE">View in CodePen</a>
 									</div>
 								</article>
 							</li>
@@ -705,7 +705,6 @@
 								</article>
 							</li>
 
-							<!--
 							<li tabindex="1" class="tile inactive">
 								<img class="tile-thumbnail" src="images/feature/filters-thumbnail.png" alt="Event Results with Filters" />
 								<article class="tile-content">
@@ -726,7 +725,7 @@
 												The simple corresponding classes between the result and filter checkbox didn't work for dates, however. Instead I had the date converted to a number - yyyymmdd - and stored as a data attribute (since classes have to start with a letter). With the dates formatted as numbers, the filter can simply check whether the result"s data attribute is greater than or less than the requested dates.
 											</p>
 										</div>
-										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/6z3aetug/">View in JSFiddle</a>
+										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/XWdLbZp">View in CodePen</a>
 									</div>
 								</article>
 							</li>
@@ -745,12 +744,12 @@
 												Made for the NewYorkTheaterTickets site, this code takes the data from an 'event results' plugin (pictured top left) and maps it to a jQuery UI calendar.
 											</p>
 										</div>
-										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/d9365oq8/">View in JSFiddle</a>
+										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/WNwqvYb">View in CodePen</a>
 									</div>
 								</article>
 							</li>
 
-
+							<!--
 							<li tabindex="1" class="tile inactive">
 								<img class="tile-thumbnail" src="images/feature/widget-thumbnail.png" alt="Search Widget Builder" />
 								<article class="tile-content">
