--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 
 							<!-- TICKET LIQUIDATOR, DEMO, 2019 -->
 							<li id="megaseats" tabindex="1" class="tile inactive" data-type='demo' data-year='2019'>
-								<img class="tile-thumbnail" src="images/site/ticketliquidator-demo-thumbnail.png" alt="TicketMystery Demo" />
+								<img class="tile-thumbnail" src="images/demo/ticketliquidator-demo-thumbnail.png" alt="Ticket Liquidator Demo" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/site/ticketliquidator-demo.png" alt="TicketMystery Demo" />
+										<img src="images/demo/ticketliquidator-demo.png" alt="Ticket Liquidator Demo" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Ticket Liquidator Demo</h3>
@@ -109,10 +109,10 @@
 
 							<!-- TICKET MYSTERY, DEMO, 2019 -->
 							<li id="megaseats" tabindex="1" class="tile inactive" data-type='demo' data-year='2019'>
-								<img class="tile-thumbnail" src="images/site/ticketmystery-demo-thumbnail.png" alt="TicketMystery Demo" />
+								<img class="tile-thumbnail" src="images/demo/ticketmystery-demo-thumbnail.png" alt="TicketMystery Demo" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img src="images/site/ticketmystery-demo.png" alt="TicketMystery Demo" />
+										<img src="images/demo/ticketmystery-demo.png" alt="TicketMystery Demo" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">TicketMystery Demo</h3>
