--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 								</article>
 							</li>
 							
-							<!-- TICKETS LIVE, SITE, 2019 
-							<li id="ticketslive" tabindex="1" class="tile inactive" data-type='site' data-year='2019'>
+							TICKETS LIVE, SITE, 2019 
+							<li id="ticketslive" tabindex="1" class="tile inactive" data-type='site' data-year='2019' style="display:none">
 								<img class="tile-thumbnail" src="images/site/ticketslive-thumbnail.png" alt="TicketsLive" />
 								<article class="tile-content">
 									<div class="project-image project-content">
@@ -205,7 +205,7 @@
 										<a class="tile-link btn" target="_blank" href="https://tlcketmaster.live">View Site</a>
 									</div>
 								</article>
-							</li>-->
+							</li>
 																					
 							<!-- TICKETS CENTER, SITE, 2019 -->
 							<li id="ticketscenter" tabindex="1" class="tile inactive" data-type='site' data-year='2019'>
@@ -301,37 +301,6 @@
 								</article>
 							</li>
 
-							<!-- CMS Template Revamp, MISC, 2017 
-							<li id="cms-template-revamp" tabindex="1" class="tile inactive" data-type='misc' data-year='2018'>
-								<img class="tile-thumbnail" src="images/revamp-thumbnail.png" alt="CMS Template Revamp" />
-								<article class="tile-content">
-									<div class="project-image project-content">
-										<img src="images/revamp.png" alt="CMS Template Revamp" />
-									</div>
-									<div class="project-info project-content">
-										<h3 class="project-title">CMS Template Revamp</h3>
-										<p class="project-date">2017</p>
-										<div class="project-desc">
-											<p>
-                                                Our company utilizes a licensed third-party CMS to provide pre-built template sites for ticket brokers and marketers. 
-                                                Recently our CEO reviewed the <a target="_blank" href="http://default.showsearch.com">default appearance</a> and 
-                                                was disappointed that the sites looked dated and that the template options didn't provide meaningful enough differentiation.
-											</p>
-											<p>
-												I was asked to create a new template that addressed these issues which would then be passed on to the 
-                                                CMS developer to implement as the new default.
-											</p>
-											<p>
-												I built this site on top of the existing template and implemented a quick and dirty configuration menu on it 
-                                                to demonstrate what options we wanted added to the CMS and how they would interact with the template's layout.
-											</p>
-										</div>
-										<a class="tile-link btn" target="_blank" href="http://revamp.showsearch.com">View Site</a>
-									</div>
-								</article>
-							</li>
-							-->
-
 							<!-- EzEvent Tickets, SITE, 2017 -->
 							<li id="ezevent-tickets" tabindex="1" class="tile inactive" data-type='site' data-year='2017'>
 								<img class="tile-thumbnail" src="images/site/tickets-ezevent-thumbnail.png" alt="EzEvent Tickets" />
@@ -351,27 +320,6 @@
 									</div>
 								</article>
 							</li>
-
-							<!-- Rad Tickets, SITE, 2017 
-							<li id="rad-tickets" tabindex="1" class="tile inactive" data-type='site' data-year='2017'>
-								<img class="tile-thumbnail" src="images/rad-tickets-thumbnail.png" alt="Rad.Tickets" />
-								<article class="tile-content">
-									<div class="project-image project-content">
-										<img src="images/rad-tickets.png" alt="Rad.Tickets" />
-									</div>
-									<div class="project-info project-content">
-										<h3 class="project-title">Rad.Tickets</h3>
-										<p class="project-date">2017</p>
-										<div class="project-desc">
-											<p>
-												Rather than represent the home page in the images, I'm specifically showing and linking to the Octane page to 
-                                                demonstrate the flipping card mechanic I implemented on that page.
-											</p>
-										</div>
-										<a class="tile-link btn" target="_blank" href="https://octane.rad.tickets">View Site</a>
-									</div>
-								</article>
-							</li>-->
 
 							<!-- The Bloody Win, SITE, 2017 -->
 							<li id="the-bloody-win" tabindex="1" class="tile inactive" data-type='site' data-year='2017'>
@@ -809,56 +757,7 @@
 										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/WNwqvYb">View in CodePen</a>
 									</div>
 								</article>
-							</li>
-
-							<!--
-							<li tabindex="1" class="tile inactive">
-								<img class="tile-thumbnail" src="images/feature/widget-thumbnail.png" alt="Search Widget Builder" />
-								<article class="tile-content">
-									<div class="project-image project-content">
-										<img src="images/feature/widget.png" alt="Search Widget Builder" />
-									</div>
-									<div class="project-info project-content">
-										<h3 class="project-title">Search Widget Builder</h3>
-										<p class="project-date">2016</p>
-										<div class="project-desc">
-                                            <p>
-                                                This is a tool for creating a widget for affiliates to put on their own websites.
-                                            </p>
-                                            <p>
-                                                The original version was written using table elements and vanilla JS with no consideration made for the possibility of adding or removing affiliate networks to the tool.
-                                            </p>
-                                            <p>
-                                                Rather make it into a larger mess by trying to build upon that code, I rewrote the HTML and JS to be more streamlined and more easy to update in the future.
-                                            </p>
-										</div>
-										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/xw7sc182/">View in JSFiddle</a>
-									</div>
-								</article>
-							</li>
-
-
-							<li tabindex="1" class="tile inactive">
-								<img class="tile-thumbnail" src="images/feature/plugin-thumbnail.png" alt="Events Plugin Builder" />
-								<article class="tile-content">
-									<div class="project-image project-content">
-										<img src="images/feature/plugin.png" alt="Events Plugin Builder" />
-									</div>
-									<div class="project-info project-content">
-										<h3 class="project-title">Events Plugin Builder</h3>
-										<p class="project-date">2016</p>
-										<div class="project-desc">
-											<p>
-												This generates a plugin that enables any site to become a ticket selling website.
-											</p>
-											<p>
-												The builder provides various specificity options so that the user can tailor the results to match their needs.
-											</p>
-										</div>
-										<a class="tile-link btn" target="_blank" href="https://jsfiddle.net/steven_willets/m5vxyc9g/">View in JSFiddle</a>
-									</div>
-								</article>
-							</li>	-->							
+							</li>						
 						</ul>
 					</section>
                 </main>
