--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 								</article>
 							</li>
 							
-							TICKETS LIVE, SITE, 2019 
+							<!-- TICKETS LIVE, SITE, 2019  -->
 							<li id="ticketslive" tabindex="1" class="tile inactive" data-type='site' data-year='2019' style="display:none">
 								<img class="tile-thumbnail" src="images/site/ticketslive-thumbnail.png" alt="TicketsLive" />
 								<article class="tile-content">
