--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 								</article>
 							</li>
 							
-							<!-- TICKETS LIVE, SITE, 2019  -->
+							<!-- TICKETS LIVE, SITE, 2019  
 							<li id="ticketslive" tabindex="1" class="tile inactive" data-type='site' data-year='2019' style="display:none">
 								<img class="tile-thumbnail" src="images/site/ticketslive-thumbnail.png" alt="TicketsLive" />
 								<article class="tile-content">
@@ -205,7 +205,7 @@
 										<a class="tile-link btn" target="_blank" href="https://tlcketmaster.live">View Site</a>
 									</div>
 								</article>
-							</li>
+							</li>-->
 																					
 							<!-- TICKETS CENTER, SITE, 2019 -->
 							<li id="ticketscenter" tabindex="1" class="tile inactive" data-type='site' data-year='2019'>
