--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <div id="business-card" class="section-wrapper">
             <div class="section-container">
                 <section class="h-card content-section">
-                    <div class="card-photo">
-                        <img class="u-photo" src="images/steven-willets.png" alt="Steven Willets" />
-                    </div>
-                    <div class="card-info">
-                        <h2 class="name p-name">Steven Willets</h2>
-                        <h3 class="position p-job-title">Front-End Web Developer</h3>
-					</div>
-					<ul class='contact-info' style='display:none;'>
+                    <ul class='contact-info'>
+                        <li class="card-photo contact-item"">
+                            <img class="u-photo" src="images/steven-willets.png" alt="Steven Willets" />
+                        </div>
+                        <li class="card-info contact-item"">
+                            <h2 class="name p-name">Steven Willets</h2>
+                            <h3 class="position p-job-title">Front-End Web Developer</h3>
+                        </div>
 						<li class="contact-item">
 							<span class="p-adr"> 
 								<i class="fas fa-map-marker-alt"></i>
@@ -514,17 +514,15 @@
 										<a class="tile-link btn" target="_blank" href="https://corporate.ticketnetwork.com">View Site</a>
 									</div>
 								</article>
-							</li>
-						</ul>
-					</section>
+                            </li>
+                            
 
-					<hr class="section-break" />
 
-					<section id="javascript">
-						<h2 class="content-heading">JavaScript</h2>
-						<ul class="tile-container">
 
-							<!-- 2020 -->
+
+
+
+                            <!-- 2020 -->
 
 							<!-- API EVENT RESULTS, FEATURE, 2020 -->
 							<li id="api-event-results" tabindex="1" class="tile inactive" data-type='feature' data-year='2020'>
@@ -817,39 +815,13 @@
 										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/WNwqvYb">View in CodePen</a>
 									</div>
 								</article>
-							</li>						
+							</li>	
 						</ul>
 					</section>
+
                 </main>
             </div>
         </div>
-        <footer class="section-wrapper">
-            <div class="section-container">
-				<ul class='contact-info content-section h-card'>
-					<li class="contact-item">
-						<span class="p-adr"> 
-							<i class="fas fa-map-marker-alt"></i>
-							<span class="p-street-address">289 Parmelee Hill Rd</span>
-							<span class="p-locality">Durham</span>
-							<span class="p-region">CT</span> 
-							<span class="p-postal-code">06422</span>
-						</span>
-					</li>
-					<li class="contact-item">
-						<a class="contact-link u-email" href="mailto:stevenawillets@gmail.com">
-							<i class="fas fa-envelope"></i>
-							<span>stevenawillets@gmail.com</span>
-						</a>
-					</li>
-					<li class="contact-item">
-						<a class="contact-link p-tel" href="tel:+12038236645">
-							<i class="fas fa-phone"></i>
-							<span>(203)823-6645</span>
-						</a>
-					</li>
-				</ul>
-			</div>
-        </footer>
 		<div id="overlay"></div>
         <div id="controls">
         	<a id="close-slide" href="#"><i class="fas fa-times"></i></a>
