--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <div id="code-portfolio" class="page-container" data-role="page" >
         <header>
         </header>
-        <div id="business-card" class="section-wrapper">
+        <div id="business-card" class="section-wrapper" style="display:none;">
             <div class="section-container">
                 <section class="h-card content-section">
-                    <ul class='contact-info'>
-                        <li class="card-photo contact-item"">
+                    <div class='contact-info'>
+                        <div class="card-photo contact-item"">
                             <img class="u-photo" src="images/steven-willets.png" alt="Steven Willets" />
                         </div>
                         <li class="card-info contact-item"">
                             <h2 class="name p-name">Steven Willets</h2>
                             <h3 class="position p-job-title">Front-End Web Developer</h3>
                         </div>
-						<li class="contact-item">
+						<div class="contact-item">
 							<span class="p-adr"> 
 								<i class="fas fa-map-marker-alt"></i>
 								<span class="p-street-address">289 Parmelee Hill Rd</span>
@@ -38,23 +38,24 @@
 								<span class="p-region">CT</span> 
 								<span class="p-postal-code">06422</span>
 							</span>
-						</li>
-						<li class="contact-item">
+						</div>
+						<div class="contact-item">
 							<a class="contact-link u-email" href="mailto:stevenawillets@gmail.com">
 								<i class="fas fa-envelope"></i>
 								<span>stevenawillets@gmail.com</span>
 							</a>
-						</li>
-						<li class="contact-item">
+						</div>
+						<div class="contact-item">
 							<a class="contact-link p-tel" href="tel:+12038236645">
 								<i class="fas fa-phone"></i>
 								<span>(203)823-6645</span>
 							</a>
-						</li>
-					</ul>
+						</div>
+					</div>
                 </section>
             </div>
-        </div>
+		</div>
+		
         <div id="main-content" class="section-wrapper">
             <div class="section-container">
                 <main class="content-section">
@@ -330,7 +331,7 @@
 									</div>
 								</article>
 							</li>
-														
+
 							<!-- TICKETS CENTER, SITE, 2019 -->
 							<li id="ticketscenter" tabindex="1" class="tile inactive" data-type='site' data-year='2019'>
 								<div class='tile-thumbnail-container'>
