--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="card-photo contact-item"">
                             <img class="u-photo" src="images/steven-willets.png" alt="Steven Willets" />
                         </div>
-                        <li class="card-info contact-item"">
+                        <div class="card-info contact-item"">
                             <h2 class="name p-name">Steven Willets</h2>
                             <h3 class="position p-job-title">Front-End Web Developer</h3>
                         </div>
