--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 							</li>
 
 							<!-- RESULTS WITH FILTERS, FEATURE, 2018 -->
-							<li tabindex="1" class="tile inactive">
+							<li tabindex="1" class="tile inactive" data-type='feature' data-year='2018'>
 								<div class='tile-thumbnail'>
 									<img class="thumbnail-image" src="images/feature/results-with-filters-thumbnail.png" alt="Event Results with Filters" />
 									<div class="thumbnail-details">
@@ -681,7 +681,7 @@
 							</li>
 
 							<!-- CARD RESULTS WITH IMAGES, FEATURE, 2017 -->
-							<li tabindex="1" class="tile inactive">
+							<li tabindex="1" class="tile inactive" data-type='feature' data-year='2017'>
 								<div class='tile-thumbnail'>
 									<img class="thumbnail-image" src="images/feature/card-results-with-images-thumbnail.png" alt="Card Results with Images" />
 									<div class="thumbnail-details">
