--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
 							<h2 class="name p-name">Steven Willets</h2>
 							<h3 class="position p-job-title">Front-End Developer</h3>
 						</div>
+						<ul class="contact-info content-section h-card">
+							<li class="contact-item">
+								<span class="p-adr"> 
+									<i class="fas fa-map-marker-alt"></i>
+									<span class="p-street-address">289 Parmelee Hill Rd</span>
+									<span class="p-locality">Durham</span>
+									<span class="p-region">CT</span> 
+									<span class="p-postal-code">06422</span>
+								</span>
+							</li>
+							<li class="contact-item">
+								<a class="contact-link u-email ui-link" href="mailto:stevenawillets@gmail.com">
+									<i class="fas fa-envelope"></i>
+									<span>stevenawillets@gmail.com</span>
+								</a>
+							</li>
+							<li class="contact-item">
+								<a class="contact-link p-tel ui-link" href="tel:+12038236645">
+									<i class="fas fa-phone"></i>
+									<span>(203) 823-6645</span>
+								</a>
+							</li>
+						</ul>
 					</section>
 				</div>
 			</div>
@@ -1054,7 +1077,7 @@
             </div>
 		</div>
 		<footer class="section-wrapper">
-            <div class="section-container">
+            <!--<div class="section-container">
 				<ul class='contact-info content-section h-card'>
 					<li class="contact-item">
 						<span class="p-adr"> 
@@ -1077,7 +1100,7 @@
 							<span>(203) 823-6645</span>
 						</a>
 					</li>
-				</ul>
+				</ul>-->
 			</div>
         </footer>
 		<div id="overlay"></div>
