--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
 							</li>
 
 							<!-- FLIP CARDS, FEATURE, 2017 -->
-							<li id="flip-cards" tabindex="1" class="tile inactive" data-type='site' data-year='2017'>
+							<li id="flip-cards" tabindex="1" class="tile inactive" data-type='feature' data-year='2017'>
 								<div class='tile-thumbnail'>
 									<img class="thumbnail-image" src="images/feature/flip-cards-thumbnail.png" alt="Flip Cards" />
 									<div class="thumbnail-details">
@@ -960,7 +960,7 @@
 							</li>
 
 							<!-- CALENDAR RESULTS, FEATURE, 2017 -->
-							<li tabindex="1" class="tile inactive">
+							<li tabindex="1" class="tile inactive" data-type='feature' data-year='2017'>
 								<div class='tile-thumbnail'>
 									<img class="thumbnail-image" src="images/feature/calendar-results-thumbnail.png" alt="Event Results Mapped to Calendar" />
 									<div class="thumbnail-details">
