--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="description" content="A porfolio of my work as a front-end developer." />
+	<meta name="description" content="A portfolio of my work as a front-end developer." />
     <link rel="canonical" href="https://steven-willets.github.io/" />
-    <title>Portfolio - Steven Willets</title>   
+    <title>Portfolio | Steven Willets, Front-End Developer</title>   
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600"> 
