--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div id="main-content" class="section-wrapper">
             <div class="section-container">
                 <main class="content-section">
-					<h1 class="main-heading">Web Portfolio</h1>
+					<h1 class="main-heading">Digital Portfolio</h1>
 					<section id="websites">
-						<!--<h2 class="content-heading">Websites</h2>-->
+						<h2 class="content-heading">Websites</h2>
 						<ul class="tile-container">
 
 							<!-- 2020 -->
@@ -630,7 +630,7 @@
 					<section id="javascript">
 						<h2 class="content-heading">Features</h2>
 						<ul class="tile-container">
-							
+
 							<!-- API EVENT RESULTS, FEATURE, 2020-->
 							<li id="api-event-results" tabindex="1" class="tile inactive" data-type='feature' data-year='2020'>
 								<div class='tile-thumbnail'>
