--- a/index.html
+++ b/index.html
@@ -663,7 +663,8 @@
 												Condensing the options like this also allowed us to expand the size of the preview and bring it front and center. 
 											</p>
 										</div>
-										<a class="tile-link btn" target="_blank" href="https://www.ticketnetwork.com/en/affiliate-plugin#form">View Feature</a>
+										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/rNegEqZ">View Builder</a>
+										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/yLOWmRr">View Widget</a>
 									</div>
 								</article>
 							</li> 
@@ -695,7 +696,9 @@
 												When the client-side version of our ticket inventory API was released, it allow me to update this widget with search suggestions, a feature that had been sorely lacking.
 											</p>
 										</div>
-										<a class="tile-link btn" target="_blank" href="http://utilities.showsearch.com/page/pl-search-widget">View Feature</a>
+										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/vYGwoEG">View Builder</a>
+										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/zYqQgMG">View Widget</a>
+										
 									</div>
 								</article>
 							</li>	 						
@@ -922,7 +925,8 @@
 												
 											</p>
 										</div>
-										<a class="tile-link btn" target="_blank" href="https://www.ticketnetwork.com/en/affiliate-calendar#form">View Feature</a>
+										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/OJNYKZQ">View Builder</a>
+										<a class="tile-link btn" target="_blank" href="https://codepen.io/steven-willets/pen/NWNVQOL">View Widget</a>
 									</div>
 								</article>
 							</li> 
