--- a/dev.html
+++ b/dev.html
@@ -62,8 +62,9 @@
 					<h1 class="main-heading">Digital Portfolio</h1>
 					<section id="tile-grid-container">
 						<div id='tile-grid-header'>
-							<h2 class="content-heading grid-tab">Websites</h2>
-							<h2 class="content-heading grid-tab">Features</h2>
+							<a href='#' class="grid-tab"><h2 class="content-heading">Websites</h2></a>
+							<span class='grid-tab-separator'>|</span>
+							<a href='#' class="grid-tab"></a><h2 class="content-heading">Features</h2></a>
 							<div id='sliding-box'></div>
 						</div>
 						
