--- a/dev.html
+++ b/dev.html
@@ -13,6 +13,29 @@
 	<link rel="stylesheet" href="styles/jquery.mobile.structure-1.4.5.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+
+	<style>
+		#tile-grid {
+			position:relative;
+		}
+		#tile-grid-heading {
+			display:inline-flex;
+			margin: 0 -20px;
+			position:relative;
+		}
+		.grid-tab {
+			display:block;
+			margin:0 20px;
+		}
+		/*.grid-tab-separator {
+			
+		}*/
+		#sliding-box {
+			border: 1px solid rgb(62, 62, 62);
+			opacity: .7;
+			position:absolute;
+		}
+	</style>
 </head>
 
 <body>
