--- a/dev.html
+++ b/dev.html
@@ -87,7 +87,7 @@
 						<div id='tile-grid-header'>
 							<a href='#' class="grid-tab"><h2 class="content-heading">Websites</h2></a>
 							<span class='grid-tab-separator'>|</span>
-							<a href='#' class="grid-tab"></a><h2 class="content-heading">Features</h2></a>
+							<a href='#' class="grid-tab"><h2 class="content-heading">Features</h2></a>
 							<div id='sliding-box'></div>
 						</div>
 						
