--- a/dev.html
+++ b/dev.html
@@ -18,7 +18,7 @@
 		#tile-grid {
 			position:relative;
 		}
-		#tile-grid-heading {
+		#tile-grid-header {
 			display:inline-flex;
 			margin: 0 -20px;
 			position:relative;
