--- a/dev.html
+++ b/dev.html
@@ -43,7 +43,7 @@
 		}
 	</style>
 	<script>
-		$('.grid-tab:not(.active-tab)').click(function(e){
+		$('.grid-tab').click(function(e){
 			$('.grid-tab').removeClass('active-tab');
 			$(e.target).addClass('active-tab')
 			
