--- a/dev.html
+++ b/dev.html
@@ -1136,7 +1136,7 @@
 			console.log('clicked')
 			e.preventDefault();
 			$('.grid-tab').removeClass('active-tab');
-			$(e.target).addClass('active-tab');
+			$('.grid-tab', e).addClass('active-tab');
 			
 			var $activeTab = $('.active-tab');
 			$('#sliding-box').css('margin-left',$activeTab.offset().left - $('.grid-tab:first-child').offset().left).width($activeTab.outerWidth(true))
