--- a/dev.html
+++ b/dev.html
@@ -29,6 +29,9 @@
 			margin:0 20px;
 			color: inherit;
 		}
+		.grid-tab * {
+			pointer-events: none;
+		}
 		.grid-tab-separator {
 			margin: 0 20px;
 		}
