--- a/dev.html
+++ b/dev.html
@@ -1139,7 +1139,7 @@
 			console.log('clicked')
 			e.preventDefault();
 			$('.grid-tab').removeClass('active-tab');
-			$('.grid-tab', e).addClass('active-tab');
+			$(e.target).addClass('active-tab');
 			
 			var $activeTab = $('.active-tab');
 			var $slideBox = $('#sliding-box')	
