--- a/dev.html
+++ b/dev.html
@@ -25,10 +25,11 @@
 			left: 0;
 			right: 0;
 			top: 0;
+			z-index:1;
 		}
 		.tile-container.active-grid {
 			opacity:1;
-			position:relative;
+			z-index:2;
 		}
 		#tile-grid-header {
 			display:inline-flex;
