--- a/dev.html
+++ b/dev.html
@@ -1148,22 +1148,27 @@
         </div>
 	</div>
 	<script>
+		function gridFlexHeight(){
+			$('.tile-grid').height($('.active-grid').outerHeight(true))
+		};
+
 		$('.grid-tab').click(function(e){
 			e.preventDefault();
 			
 			$('.grid-tab').removeClass('active-tab');
 			$('.tile-container').removeClass('active-grid')
-
+			
 			$(e.target).addClass('active-tab');
 			
 			var $activeTab = $('.active-tab');
 			var $slideBox = $('#sliding-box');	
 			var leftOffset = $activeTab.offset().left - $('.grid-tab:first-child').offset().left;
 
+			gridFlexHeight()
 			$('#' + $activeTab.attr('data-target')).addClass('active-grid')
 			$slideBox.css('margin-left', leftOffset)
 			$slideBox.width($activeTab.outerWidth(true))
-		})
+		});
 	</script>
     <script src="scripts/portfolio-main.js"></script>
 </body>
