--- a/dev.html
+++ b/dev.html
@@ -1169,6 +1169,10 @@
 			$slideBox.css('margin-left', leftOffset)
 			$slideBox.width($activeTab.outerWidth(true))
 		});
+
+		$(document).ready(function(){
+			gridFlexHeight()
+		});
 	</script>
     <script src="scripts/portfolio-main.js"></script>
 </body>
