--- a/dev.html
+++ b/dev.html
@@ -1149,7 +1149,7 @@
 	</div>
 	<script>
 		function gridFlexHeight(){
-			$('.tile-grid').height($('.active-grid').outerHeight(true))
+			$('#tile-grid').height($('.active-grid').outerHeight(true))
 		};
 
 		$('.grid-tab').click(function(e){
