--- a/dev.html
+++ b/dev.html
@@ -23,13 +23,14 @@
 				<div class="section-container">
 					<section class="h-card content-section">
 						<div class="card-photo">
-							<img class="u-photo" src="images/steven-willets.png" alt="Steven Willets" />
+							<img class="u-photo" src="images/steven-willets.jpg" alt="Steven Willets" />
 						</div>
 						<div class="card-info">
 							<h2 class="name p-name">Steven Willets</h2>
 							<h3 class="position p-job-title">Front-End Developer</h3>
+							<a class='resume' href="/steven-willets-resume.pdf">Resum&eacute;</a>
 						</div>
-						<ul class='contact-info content-section h-card'>
+						<ul class='contact-info'>
 							<li class="contact-item">
 								<span class="p-adr"> 
 									<i class="fas fa-map-marker-alt"></i>
@@ -49,6 +50,12 @@
 								<a class="contact-link p-tel" href="tel:+12038236645">
 									<i class="fas fa-phone"></i>
 									<span>(203) 823-6645</span>
+								</a>
+							</li>
+							<li class="contact-item">
+								<a class="contact-link" href="https://www.linkedin.com/in/steven-willets-a726785b/">
+									<i class="fas fa-linkedin"></i>
+									<span>LinkedIn</span>
 								</a>
 							</li>
 						</ul>
