--- a/index.html
+++ b/index.html
@@ -1094,12 +1094,14 @@
 				</ul>
 			</div>
         </footer>
-		<div id="overlay"></div>
-        <div id="controls">
-        	<a id="close-slide" href="#"><i class="fas fa-times"></i></a>
-        	<a id="prev-slide" class="move-slide" href="prev"><i class="fa fa-angle-left"></i></a>
-        	<a id="next-slide" class="move-slide" href="next"><i class="fa fa-angle-right"></i></a>
-        </div>
+		<div id="overlay">
+			<div id="controls">
+				<a id="close-slide" href="#"><i class="fas fa-times"></i></a>
+				<a id="prev-slide" class="move-slide" href="prev" data-direction="prev"><i class="fa fa-angle-left"></i></a>
+				<a id="next-slide" class="move-slide" href="next" data-direction="next"><i class="fa fa-angle-right"></i></a>
+			</div>
+		</div>
+
     </div>
     <script src="scripts/portfolio-main.js"></script>
 </body>
